--- a/package.json
+++ b/package.json
@@ -7,18 +7,29 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.dev.js",
     "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "dev": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.0.2",
+    "@eslint/js": "^9.1.1",
+    "@stylistic/eslint-plugin": "^1.7.2",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "csv-loader": "^3.0.5",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.0.0",
     "html-webpack-plugin": "^5.6.0",
     "json5": "^2.2.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "3.2.5",
     "style-loader": "^3.3.3",
     "toml": "^3.0.0",
     "webpack": "^5.89.0",
