--- a/package.json
+++ b/package.json
@@ -35,11 +35,6 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0",
-    "xml-loader": "^1.2.1",
-    "yamljs": "^0.3.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
+    "webpack-merge": "^5.10.0"
   }
 }
