Change package name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-template",
+  "name": "dynamic-user-interface-interactions",
   "version": "1.0.0",
   "description": "",
   "private": true,
